01-namespaces/base/04-web-ui/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-ui
    app.kubernetes.io/component: web-ui
    app.kubernetes.io/instance: web-ui
    app.kubernetes.io/part-of: gameoflife
    prometheus-metrics: 'true'
  name: web-ui
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: web-ui
    deploymentconfig: web-ui
  sessionAffinity: None
  type: ClusterIP
